--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <div class="bill">
             <p>Bill</p>
             <div class="bill-input">
-              <label for="">
+              <label for="bill">
                 <img src="./images/icon-dollar.svg" alt="" />
               </label>
               <input
@@ -308,7 +308,7 @@
             <p>Number of People</p>
             <p>can't be zero</p>
             <div class="bill-input">
-              <label for="">
+              <label for="numberOfPerson">
                 <img src="./images/icon-person.svg" alt="" />
               </label>
               <input
